--- a/src/bestanden/properties.properties
+++ b/src/bestanden/properties.properties
@@ -1,2 +1,7 @@
-#Wed Dec 04 13:58:43 CET 2019
+#Thu Dec 05 22:00:17 CET 2019
+SOORT=GRENS
+GETAL=32.0
+DREMPEL=100
+CATEGORIE=
 DATABASE=txt
+TYPE=Euro
