Afsluit scherm met kortingen, enkel kortingen worden nog niet berekend

--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,6 +1,7 @@
-GETAL=15
-SOORT=GRENS
-DREMPEL=5.5
+#Sun Dec 08 18:05:50 CET 2019
+GETAL=19
+SOORT=DUURSTE
+DREMPEL=
 CATEGORIE=
 DATABASE=txt
-TYPE=Percentage
+TYPE=Euro
