--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,7 +1,11 @@
-#Sun Dec 08 18:05:50 CET 2019
+#Sun Dec 15 14:44:42 CET 2019
+DREMPEL=
+HEADER=
 GETAL=19
 SOORT=DUURSTE
-DREMPEL=
-CATEGORIE=
 DATABASE=txt
+HBOODSCHAP=
+FOOTER=
 TYPE=Euro
+FBOODSCHAP=
+CATEGORIE=
