--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Sun Dec 15 15:19:46 CET 2019
+#Sun Dec 15 16:16:11 CET 2019
 DREMPEL=
 HEADER=
-GETAL=28
-SOORT=DUURSTE
+GETAL=59
+SOORT=GROEP
 DATABASE=txt
 HBOODSCHAP=
 FOOTER=
-TYPE=Euro
 FBOODSCHAP=
-CATEGORIE=
+TYPE=Percentage
+CATEGORIE=GR1
