--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Sun Dec 15 16:16:11 CET 2019
+#Sat Dec 21 14:25:02 CET 2019
 DREMPEL=
 HEADER=
-GETAL=59
-SOORT=GROEP
+GETAL=
+SOORT=GEEN
 DATABASE=txt
 HBOODSCHAP=
-FOOTER=
+FOOTER=Totale prijs zonder en met korting
 FBOODSCHAP=
-TYPE=Percentage
-CATEGORIE=GR1
+TYPE=
+CATEGORIE=
