--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Sat Dec 21 14:25:02 CET 2019
+#Sat Dec 21 15:07:13 CET 2019
 DREMPEL=
-HEADER=
+HEADER=Datum en tijd van afprinten
 GETAL=
 SOORT=GEEN
 DATABASE=txt
 HBOODSCHAP=
-FOOTER=Totale prijs zonder en met korting
-FBOODSCHAP=
+FOOTER=
 TYPE=
+FBOODSCHAP=
 CATEGORIE=
