--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Sat Dec 21 15:07:13 CET 2019
+#Sat Dec 21 19:09:38 CET 2019
 DREMPEL=
 HEADER=Datum en tijd van afprinten
-GETAL=
-SOORT=GEEN
+GETAL=30
+SOORT=GROEP
 DATABASE=txt
 HBOODSCHAP=
 FOOTER=
-TYPE=
 FBOODSCHAP=
-CATEGORIE=
+TYPE=Euro
+CATEGORIE=GR1
