MVC properties fix

--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Sat Dec 21 19:09:38 CET 2019
+#Mon Dec 23 13:53:54 CET 2019
 DREMPEL=
 HEADER=Datum en tijd van afprinten
-GETAL=30
-SOORT=GROEP
+GETAL=
+SOORT=GEEN
 DATABASE=txt
 HBOODSCHAP=
 FOOTER=
+TYPE=
 FBOODSCHAP=
-TYPE=Euro
-CATEGORIE=GR1
+CATEGORIE=
