--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Mon Dec 23 13:53:54 CET 2019
+#Mon Dec 23 17:20:28 CET 2019
 DREMPEL=
-HEADER=Datum en tijd van afprinten
-GETAL=
-SOORT=GEEN
-DATABASE=txt
+HEADER=
+GETAL=14
+SOORT=DUURSTE
+DATABASE=xls
 HBOODSCHAP=
-FOOTER=
-TYPE=
+FOOTER=Totale prijs zonder en met korting
+TYPE=Percentage
 FBOODSCHAP=
 CATEGORIE=
