--- a/src/bestanden/config.properties
+++ b/src/bestanden/config.properties
@@ -1,11 +1,11 @@
-#Mon Dec 23 17:20:28 CET 2019
-DREMPEL=
-HEADER=
+#Mon Dec 23 19:56:42 CET 2019
+DREMPEL=4
+HEADER=Algemene boodschap
 GETAL=14
-SOORT=DUURSTE
-DATABASE=xls
-HBOODSCHAP=
-FOOTER=Totale prijs zonder en met korting
-TYPE=Percentage
-FBOODSCHAP=
+SOORT=GRENS
+DATABASE=txt
+HBOODSCHAP=\=\=Colruyt\=\=
+FOOTER=Algemene boodschap
+TYPE=Euro
+FBOODSCHAP=\=\=Dank voor uw aankoop\=\=
 CATEGORIE=
